--- a/src/style.css
+++ b/src/style.css
@@ -69,7 +69,17 @@ h1:after{
     top: 50%;
     left: 50%;
   }
-
+  .page-container {
+    position: relative;
+    min-height: 100vh;
+  }
+  .footer {
+    bottom: 0;
+    width: 100%;
+    height: 60px;
+    line-height: 60px;
+    background-color: #faf8f8;
+}
 
 .modal-btn{
     background-color: white;
@@ -79,9 +89,6 @@ h1:after{
 }
 
 
-.modal-close-btn{
-border-color: black;
-}
 
 .portfolio-container{
     margin: 10px;
