--- a/src/style.css
+++ b/src/style.css
@@ -56,8 +56,8 @@ h1:after{
     height: 370px;
 }
 .resume-link {
-  color: black;
-  text-decoration: none;
+  color: black !important;
+  text-decoration: none !important;
 }
 
 .flex {
@@ -82,10 +82,10 @@ h1:after{
 }
 
 .modal-btn{
-    background-color: white;
+    background-color: white !important;
     margin: 10px;
    display: flex;
-   border-color: black;
+   border-color: black !important;
 }
 
 
